fix landing page title not centered on smaller screens

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -81,6 +81,13 @@
     font-size: 5rem;
 }
 
+@media screen and (max-width: 450px) {
+    .landing-page--img-text > h1  { 
+        color: white;
+        font-size: 3.5rem;
+    }
+}
+
 .landing-page--img-text > h2 {
     color: white;
     font-size: 1.5rem;
@@ -115,7 +122,6 @@
     border: none;
 }
 
-
 .card--thumbnail {
     width: 100%;
     height: 100%;
@@ -147,6 +153,14 @@
 
 .card--btn {
     display: none;
+}
+
+@media screen and (max-width: 992px) {
+    .card-btn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 .card--btn, .form--btn {
